[package]
name = "camelcase-keys"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Recursively convert the keys of a JSON object to camelCase. A faithful port of the camelcase-keys npm package."
documentation = "https://docs.rs/camelcase-keys"
repository = "https://github.com/trananhtung/camelcase-keys"
homepage = "https://github.com/trananhtung/camelcase-keys"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["camelcase", "keys", "object", "json", "case"]
categories = ["text-processing", "value-formatting"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
camelcase = "0.1"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
